style.css
@font-face {
  font-family: "PixelarRegularW01-Regular";
  src: url("https://db.onlinewebfonts.com/t/b2e75c336df191233b3096682c9ee6be.eot");
  src: url("https://db.onlinewebfonts.com/t/b2e75c336df191233b3096682c9ee6be.eot?#iefix")
      format("embedded-opentype"),
    url("https://db.onlinewebfonts.com/t/b2e75c336df191233b3096682c9ee6be.woff2")
      format("woff2"),
    url("https://db.onlinewebfonts.com/t/b2e75c336df191233b3096682c9ee6be.woff")
      format("woff"),
    url("https://db.onlinewebfonts.com/t/b2e75c336df191233b3096682c9ee6be.ttf")
      format("truetype"),
    url("https://db.onlinewebfonts.com/t/b2e75c336df191233b3096682c9ee6be.svg#PixelarRegularW01-Regular")
      format("svg");
}

* {
  font-family: "PixelarRegularW01-Regular";
  font-size: larger;
}

html,
.row {
  background-color: rgb(97, 176, 207);
}

ol {
  text-align: left;
  margin-left: 50px;
}

#best-scores {
  width: 400px;
  height: 800px;
  /* grid-column: 1; */
  border: 3px solid;
  margin-left: 100px;
  border-radius: 3%;
  background-color: rgba(255, 255, 255, 0.336);
  text-align: center;
  size: 0.1em;
  margin-top: 100px;
}

#game {
  width: 500px;
  height: 800px;
  border: solid 5px;
  overflow: hidden;
  background-image: url("imgs/background.png");
  z-index: 1;
  /* grid-column: 2; */
  margin-left: 50px;
  margin-top: 100px;
  position: relative;
}

#leaderboard {
  /* grid-column: 3; */
  border: 3px solid;
  /* margin-right: 80px; */
  width: 400px;
  height: 800px;
  margin-left: 100px;
  border-radius: 3%;
  background-color: rgb(255, 255, 255);
  text-align: center;
  margin-top: 100px;
}

#start-box {
  position: absolute;
  height: 250px;
  width: 200px;
  top: 150px;
  left: 150px;
  text-align: center;
  color: white;
  size: 100px;
  background-color: transparent;
  border-radius: 5%;
  z-index: 3;
}

#start-message {
  text-align: center;
  margin-left: 10px;
}

#bird {
  width: 50px;
  height: 50px;
  background-image: url("imgs/flappybird.png");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  position: relative;
  top: 350px;
  left: 80px;
  z-index: 2;
}

#top {
  transform: rotate(180deg);
  height: 100px;
  width: 60px;
  position: absolute;
  background-image: url("imgs/pipe.png");
}

#bottom {
  background-image: url("imgs/pipe.png");
  position: absolute;
  height: 500px;
  width: 60px;
  top: 300px;
}

#pipe {
  width: 60px;
  height: 800px;
  top: -50px;
  position: relative;
  background-color: transparent;
  left: 500px;
  /* z-index: 0; */
}

#hole {
  position: absolute;
  height: 200px;
  width: 60px;
  top: 100px;
  background-color: transparent;
}

@keyframes pipe-move {
  0% {
    left: 500px;
  }
  100% {
    left: -60px;
  }
}

#start {
  position: relative;
  width: 200px;
  height: 100px;
  left: -10px;
  text-align: center;
  z-index: 2;
  background-image: url("imgs/start\ button.png");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  border: none;
}

#scorebox {
  text-align: center;
  position: absolute;
  left: 50px;
  color: white;
  z-index: 5;
}

